--- a/index.html
+++ b/index.html
@@ -1,1 +1,128 @@
-<!DOCTYPE html><html lang="en" style="background: url(&quot;assets/img/bg.webp&quot;);background-size: cover;"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>Netflixy • نتفلكسي</title><meta property="og:image" content="https://netflixyapp.github.io/assets/img/marquee_promo_tile.png"><meta name="description" content="مرحبا بيك في نتفلكسي، أول تطبيق يخليك تحل حسابك على نتفلكس بطريقة ساهلة وسريعة"><meta property="og:type" content="website"><link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/icon-180.png"><link rel="icon" type="image/png" sizes="16x16" href="assets/img/icon-16.png"><link rel="icon" type="image/png" sizes="32x32" href="assets/img/icon-32.png"><link rel="icon" type="image/png" sizes="180x180" href="assets/img/icon-180.png"><link rel="icon" type="image/png" sizes="192x192" href="assets/img/icon-192.png"><link rel="icon" type="image/png" sizes="512x512" href="assets/img/icon.png"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cairo:200,300,400,500,600,700,800,900&amp;subset=arabic&amp;display=swap"><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"><link rel="stylesheet" href="assets/css/styles.min.css"></head><body style="background: transparent;"><div class="d-flex justify-content-center align-items-center" style="min-height: 100vh;overflow-y: auto;"><div class="container" style="/*min-height: 100vh;*/overflow-y: hidden;padding-top: 2rem;padding-bottom: 2rem;"><div class="row text-center" style="margin: 0px;margin-bottom: 3rem;"><div class="col"><img class="img-fluid" src="assets/img/logo_large.png" width="327" height="83"></div></div><div class="row" style="margin: 0px;"><div class="col d-lg-flex justify-content-lg-center" style="margin-bottom: 1rem;"><p class="text-center text-white d-lg-flex" style="font-size: 25px;font-family: Cairo, sans-serif;height: 100%;">مرحبا بيك في نتفلكسي<br>اختار الجهاز إلي تحب تصب عليه نتفلكسي<br>👇<br></p></div></div><div class="row" style="margin: 0px;margin-bottom: 1rem;"><div class="col d-lg-flex justify-content-lg-center"><a class="btn btn-primary btn-lg d-inline-flex justify-content-center align-items-center justify-content-lg-center align-items-lg-center" role="button" data-bss-hover-animate="pulse" style="width: 21rem;background: transparent;border: 1px solid rgba(255,255,255,0.3);font-family: Cairo, sans-serif;font-size: 1.5em;" href="wiki_pc.html">PC • حاسوب<br><i class="fa fa-windows d-lg-flex align-items-lg-center" style="margin-left: 1rem;"></i></a></div></div><div class="row" style="margin: 0px;margin-bottom: 1rem;"><div class="col d-lg-flex justify-content-lg-center"><a class="btn btn-primary btn-lg d-inline-flex justify-content-center align-items-center justify-content-lg-center align-items-lg-center" role="button" data-bss-hover-animate="pulse" style="width: 21rem;background: transparent;border: 1px solid rgba(255,255,255,0.3);font-family: Cairo, sans-serif;font-size: 1.5em;" href="wiki_android.html">Android • تلفون أندرويد<br><i class="fa fa-android d-lg-flex align-items-lg-center" style="margin-left: 1rem;"></i></a></div></div><div class="row" style="margin: 0px;margin-bottom: 1rem;"><div class="col d-lg-flex justify-content-lg-center"><a class="btn btn-primary btn-lg d-inline-flex justify-content-center align-items-center justify-content-lg-center align-items-lg-center" role="button" data-bss-hover-animate="pulse" style="width: 21rem;background: transparent;border: 1px solid rgba(255,255,255,0.3);font-family: Cairo, sans-serif;font-size: 1.5em;" href="wiki_tv.html">Smart TV • تلفزة<br><i class="fa fa-tv d-lg-flex align-items-lg-center" style="margin-left: 1rem;"></i></a></div></div><div class="row" style="margin: 0px;margin-bottom: 1rem;"><div class="col d-lg-flex justify-content-lg-center"><button class="btn btn-primary btn-lg d-inline-flex justify-content-center align-items-center justify-content-lg-center align-items-lg-center" type="button" style="width: 21rem;background: rgba(255,58,58,0.47);border: 1px solid rgba(255,255,255,0.3);font-family: Cairo, sans-serif;font-size: 1.5em;color: rgba(255,255,255,0.64);cursor: not-allowed;" data-bs-toggle="modal" data-bs-target="#modal-ios">iOS •&nbsp;أيفون و أيباد<br><i class="fa fa-apple d-lg-flex align-items-lg-center" style="margin-left: 1rem;"></i></button></div></div><div class="row" style="margin: 0;margin-top: 2rem;"><div class="col"><div class="social-icons" style="background: transparent;margin: 0;padding: 0;"><a href="https://facebook.com/netflixytn/" target="_blank"><i class="fab fa-facebook" style="color: rgba(255,255,255,0.9);border-color: rgba(255,255,255,0.5);"></i></a><a href="#" style="display: none;"><i class="fab fa-instagram" style="color: rgba(255,255,255,0.9);border-color: rgba(255,255,255,0.5);"></i></a><a href="https://github.com/Netflixyapp" target="_blank"><i class="fab fa-github" style="color: rgba(255,255,255,0.9);border-color: rgba(255,255,255,0.5);"></i></a><a href="mailto:netflixycontact@gmail.com"><i class="fas fa-envelope" style="color: rgba(255,255,255,0.9);border-color: rgba(255,255,255,0.5);"></i></a></div></div></div><div class="modal fade text-center" role="dialog" tabindex="-1" id="modal-ios"><div class="modal-dialog" role="document"><div class="modal-content"><div class="modal-body"><p style="font-family: Cairo, sans-serif;font-size: 22px;">Netflixy n'est pas disponible sur iOS</p><p style="font-family: Cairo, sans-serif;font-size: 21px;"><bdi>نتفلكسي غير متوفرة على نظام iOS</bdi></p></div><div class="modal-footer"><button class="btn btn-light" type="button" data-bs-dismiss="modal">Fermer</button></div></div></div></div></div></div><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script><script src="assets/js/script.min.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <img class="logo" src="https://netflixyapp.github.io/assets/img/logo_large.png" alt="">
+    <div class="welcome-text">
+        <p>مرحبا بيك في نتفلكسي</p>
+        <p>اختار الجهاز إلي تحب تصب عليه نتفلكسي</p>
+        <p>👇</p>
+    </div>
+    <div class="buttons">
+        <a href="/wiki_pc.html">PC • حاسوب <img src="https://img.icons8.com/fluency/50/windows-10.png" alt="windows-10"/></a>
+        <a href="/wiki_android.html">Android • تلفون أندرويد <img src="https://img.icons8.com/ios/FFFFFF/android-os.png" alt="android-os"/></a>
+        <a href="/wiki_tv.html">Smart TV • تلفزة <img src="https://img.icons8.com/ios-filled/FFFFFF/tv.png" alt="tv"/></a>
+        <a class="disabled" message-data="Netflixy n'est pas disponible sur iOS • نتفلكسي غير متوفرة على نظام iOS">iOS • أيفون و أيباد <img src="https://img.icons8.com/ios-filled/FFFFFF/mac-os.png" alt="mac-os"/></a>
+    </div>
+    <div class="socials">
+        <a href="https://facebook.com/netflixytn/"><img src="https://img.icons8.com/ios-filled/FFFFFF/facebook-new.png" alt="facebook-new"/></a>
+        <a href="https://github.com/Netflixyapp"><img src="https://img.icons8.com/ios-filled/FFFFFF/github.png" alt="github"/></a>
+        <a href="mailto:netflixycontact@gmail.com"><img src="https://img.icons8.com/ios-filled/FFFFFF/new-post.png" alt="new-post"/></a>
+    </div>
+</body>
+
+<script>
+    const disabledEls = document.getElementsByClassName("disabled");
+    for (let i = 0; i < disabledEls.length; i++) {
+        const disabledEl = disabledEls[i];
+        disabledEl.addEventListener("mouseover", (e) => {
+            
+        })
+    }
+</script>
+
+<style>
+    body {
+        font-family: Cairo, sans-serif;
+        margin: 0;
+        height: 100vh;
+        background: url(bg.png);
+        background-repeat: repeat;
+        backdrop-filter: blur(10px) brightness(.5);
+        display: grid;
+        justify-items: center;
+        align-items: center;
+        grid-template-rows: 2fr 1fr 3fr 1fr .5fr;
+    }
+
+    .logo {
+        width: 30%;
+        min-width: 350px;
+    }    
+
+    .welcome-text {
+        text-align: center;
+        color: white;
+        font-size: 25px;
+    }
+
+    .welcome-text p {
+        margin: 0;
+    }
+
+    .buttons {
+        display: grid;
+        gap: 1rem;
+    }
+
+    .buttons a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+        width: 19rem;
+        color: white;
+        background: transparent;
+        border: 1px solid rgba(255,255,255,0.3);
+        border-radius: .5rem;
+        font-size: 1.5rem;
+        padding: .3rem 1rem;
+        transition: all .2s;
+        text-decoration: none;
+    }
+    .buttons a:hover:not(.disabled) {
+        transform: scale(1.025);
+        background: rgba(255,255,255,0.1);
+    }
+
+    .buttons a img {
+        width: 30px;
+        height: 30px;
+    }
+
+    .disabled {
+        background: rgba(255,0,0,0.2) !important;
+        opacity: .7;
+    }
+
+    .disabled:hover {
+        cursor: not-allowed;
+    }
+
+    .socials {
+        display: flex;
+        gap: 1.5rem;
+        margin-top: 1rem;
+    }
+
+    .socials a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 35px;
+        height: 35px;
+        border-radius: 100%;
+        padding: .7rem;
+        border: 1px solid white;
+    }
+    
+    .socials a img {
+        width: 30px;
+        height: 30px;
+    }
+</style>
+</html>
